# sync-dir-periodical

./: .gitignore  pyproject.toml  readme.rst  sync_periodical.py
