[project]
name = "sync_periodical"
description = "Mirroring one directory to another directory."
requires-python = ">=3.10"


[tool.black]
line-length = 120
target-version = ["py312"]


[tool.ruff]
fix = false

# Same as Black.
line-length = 120

# Assume Python 3.12
target-version = "py312"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
#select = ["E4", "E7", "E9", "F"]
#ignore = []
select = ["ALL"]
ignore = [
    "ANN002", # missing-type-args
    "ANN003", # missing-type-kwargs
    "ANN101", # missing-type-self
    "ANN102", # missing-type-cls
    "BLE001", # blind-except
    "I001", # unsorted-imports
    "RUF012", # mutable-class-default
    "S311", # non-cryptographic-random-usage
]
